Day 6 - brute force

--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -24,6 +24,9 @@
       <Content Include="Input\day05.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+      <Content Include="Input\day06.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
   <ItemGroup>
